# ocdskit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  jq-CDMX.txt  manage.py  measure.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: Developing.md  Makefile  Release_process.md  Using_jq.md  Using_the_command_line.md  changelog.rst  cli.rst  conf.py  contributing.rst  index.rst  library.rst
docs/api/: cli.rst  combine.rst  exceptions.rst  hierarchy.rst  mapping_sheet.rst  normalize.rst  oc4ids.rst  packager.rst  schema.rst  upgrade.rst  util.rst
docs/cli/: examples.rst  generic.rst  oc4ids.rst  ocds.rst  schema.rst
ocdskit/: __main__.py  combine.py  detect.py  dot.py  exceptions.py  hierarchy.py  mapping_sheet.py  normalize.py  oc4ids.py  oc4ids_transforms.py  packager.py  schema.py  upgrade.py  util.py
ocdskit/cli/: __main__.py
ocdskit/cli/commands/: base.py  check_documents_urls.py  combine_record_packages.py  (+24 more)
ocdskit/commands/: base.py  combine_record_packages.py  combine_release_packages.py  compile.py  detect_format.py  echo.py  erd.py  indent.py  mapping_sheet.py  normalize.py  package_records.py  package_releases.py  schema_report.py  schema_strict.py  set_closed_codelist_enums.py  split_record_packages.py  split_release_packages.py  upgrade.py
ocdsreport/: exceptions.py
ocdsreport/cli/: __main__.py
tests/: __init__.py  conftest.py  test_combine.py  test_hierarchy.py  test_normalize.py  test_oc4ids_tranforms.py  test_oc4ids_transforms.py  test_packager.py  test_regression.py  test_schema.py  test_upgrade.py  test_util.py
tests/cassettes/: test_combine-test_merge_empty.yaml  test_combine-test_merge_with_schema.yaml  test_oc4ids_transforms-test_additional_classifications.yaml  test_oc4ids_transforms-test_administrative_entity.yaml  test_oc4ids_transforms-test_budget.yaml  test_oc4ids_transforms-test_budget_approval.yaml  test_oc4ids_transforms-test_budget_fail.yaml  test_oc4ids_transforms-test_budget_multiple.yaml  test_oc4ids_transforms-test_buyer_role.yaml  test_oc4ids_transforms-test_contract_status_active.yaml  test_oc4ids_transforms-test_contract_status_closed.yaml  test_oc4ids_transforms-test_contract_status_pre_award.yaml  test_oc4ids_transforms-test_contract_title.yaml  test_oc4ids_transforms-test_contract_value.yaml  test_oc4ids_transforms-test_contracting_period.yaml  test_oc4ids_transforms-test_contracting_process_description.yaml  test_oc4ids_transforms-test_contracting_process_setup_release_packages.yaml  test_oc4ids_transforms-test_contracting_process_setup_releases.yaml  test_oc4ids_transforms-test_cost_estimate.yaml  test_oc4ids_transforms-test_description_multiple.yaml  test_oc4ids_transforms-test_description_not_tender.yaml  test_oc4ids_transforms-test_description_one.yaml  test_oc4ids_transforms-test_description_tender.yaml  test_oc4ids_transforms-test_duplicate_public_authority_role.yaml  test_oc4ids_transforms-test_environmental_impact.yaml  test_oc4ids_transforms-test_final_audit.yaml  test_oc4ids_transforms-test_funders.yaml  test_oc4ids_transforms-test_funders_budget.yaml  test_oc4ids_transforms-test_initial_tranform_state.yaml  test_oc4ids_transforms-test_land_and_settlement_impact.yaml  test_oc4ids_transforms-test_location.yaml  test_oc4ids_transforms-test_location_from_delivery_address.yaml  test_oc4ids_transforms-test_location_from_item_location.yaml  test_oc4ids_transforms-test_location_multiple.yaml  test_oc4ids_transforms-test_location_multiple_releases.yaml  test_oc4ids_transforms-test_location_not_inferred.yaml  test_oc4ids_transforms-test_multiple_administrative_entity_in_process.yaml  test_oc4ids_transforms-test_needs_assessment.yaml  test_oc4ids_transforms-test_number_of_tenderers.yaml  test_oc4ids_transforms-test_procuring_entity.yaml  (+13 more)
tests/commands/: test_check_documents_urls.py  test_combine_record_packages.py  test_combine_release_packages.py  test_compile.py  test_convert_to_oc4ids.py  test_detect_format.py  test_echo.py  test_indent.py  test_mapping_sheet.py  test_normalize.py  test_oc4ids.py  test_package_records.py  test_package_releases.py  test_release_package.py  test_schema_report.py  test_schema_strict.py  test_set_closed_codelist_enums.py  test_set_enum_json_schema.py  test_split_project_packages.py  test_split_record_packages.py  test_split_release_packages.py  test_tabulate.py  test_update_to_v1_1.py  test_upgrade.py  test_validate.py
tests/fixtures/: check_url_release-package_minimal.json  combine-record-packages_minimal-maximal-extensions.json  combine-record-packages_minimal.json  combine-release-packages_minimal-maximal-extensions.json  combine-release-packages_minimal.json  compile_extensions.json  compile_no-extensions.json  compile_pretty_minimal.json  compile_warning.json  compiled-release-2.json  detect-format_empty.json  detect-format_mixed.json  detect-format_whitespace.json  encoding_ascii.json  encoding_utf-8.json  mapping-sheet.csv  mapping-sheet_bods.csv  mapping-sheet_codelist.csv  mapping-sheet_extension-field.csv  mapping-sheet_extension.csv  mapping-sheet_extension_extension-field.csv  mapping-sheet_extension_extension-field_array.csv  mapping-sheet_extension_extension-field_language.csv  mapping-sheet_extension_extension-field_location.csv  mapping-sheet_extension_extension-field_no-inherit-extension.csv  mapping-sheet_no-deprecated.csv  mapping-sheet_oc4ids.csv  mapping-sheet_order-by.csv  mapping-sheet_person-statement.csv  mapping-sheet_sedl.csv  oc4ids-project-package_minimal.json  oc4ids-project_minimal.json  pluck-package-extensions.csv  project-schema.json  record-package-1-2.json  record-package_extensions.json  record-package_maximal.json  record-package_minimal-1-2-extensions.json  record-package_minimal-1-2-no-metadata.json  record-package_minimal-1-2.json  (+36 more)
tools/validator_bia/: README.md  en.xlsx  es.xlsx  ocds_bia.csv  ocds_dashboard.py  ocds_documents_bia.csv  ocds_validation.py  ocdsmerge.py  requirements.txt  tabulate_ocds.py
(+97 files in other folders)
