[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ocdskit"
version = "1.2.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "A suite of command-line tools for working with OCDS data"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/ocdskit"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ijson>=2.5",
    "jsonref",
    "ocdsmerge>=0.6",
    "ocdsextensionregistry>=0.1.2",
]

[project.optional-dependencies]
perf = ["orjson>=3"]
test = [
    "coverage",
    "jsonpointer",
    "pytest",
]

[project.scripts]
ocdskit = "ocdskit.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "PERF203", "PLR091", "Q000",
    "PLR2004", "D1", "D205",
    "PTH",
    "D200",  # https://github.com/astral-sh/ruff/issues/6269
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
"*/commands/*" = ["T201"]  # print
