[metadata]
name = ocdskit
version = 1.1.8
author = Open Contracting Partnership
author_email = data@open-contracting.org
license = BSD
description = A suite of command-line tools for working with OCDS data
url = https://github.com/open-contracting/ocdskit
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ijson>=2.5
    jsonref
    ocdsmerge>=0.6
    ocdsextensionregistry>=0.1.2

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    ocdskit = ocdskit.__main__:main

[options.extras_require]
perf =
    orjson>=3
test =
    coveralls
    jsonpointer
    pytest
    pytest-cov
    pytest-vcr
docs =
    furo
    sphinx
    sphinx-autobuild
